--- a/web_tp_dz/web_dz_123/templates/settings.html
+++ b/web_tp_dz/web_dz_123/templates/settings.html
@@ -1,23 +1,15 @@
 {% extends "layouts/base.html" %}
-
+{% load static %}
 {% block content %}
-            <h3>Registration</h3>
+            <h3>Settings</h3>
             <p class = "text-danger fs-6 mt-3">Sorry, this email address already registred!</p>
                 <div class = "col-8">
-                    <div class = "row mt-2">
-                        <div class = "col-3">
-                            <p class = "text-start fs-5">Login</p>
-                        </div>
-                        <div class = "col-9">
-                            <input type="text" class = "form-control w-75" placeholder="Enter your login...">
-                        </div>
-                    </div>
                     <div class = "row mt-2">
                         <div class = "col-3">
                             <p class = "text-start fs-5">Email</p>
                         </div>
                         <div class = "col-9">
-                            <input type="text" class = "form-control w-75" placeholder="Enter your email...">
+                            <input type="text" class = "form-control w-75" placeholder="Just_User@email.com">
                         </div>
                     </div>
                     <div class = "row mt-2">
@@ -25,7 +17,7 @@
                             <p class = "text-start fs-5">NickName</p>
                         </div>
                         <div class = "col-9">
-                            <input type="text" class = "form-control w-75" placeholder="Enter your nickname...">
+                            <input type="text" class = "form-control w-75" placeholder="Just_User">
                         </div>
                     </div>
                     <div class = "row mt-2">
@@ -48,12 +40,15 @@
                         <div class = "col-3">
                             <p class = "text-start fs-5">Upload avatar</p>
                         </div>
+                        <div>
+                            <img src="{% static 'avatar.jpg' %}" width = "200" height = "200">
+                        </div>
                         <div class = "col-9">
                             <div class="input-group mb-3 w-75">
                                 <input type="file" class="form-control" id="inputGroupFile02">
                                 <label class="input-group-text" for="inputGroupFile02">Upload</label>
                             </div>
-                            <button type="button" class="btn btn-outline-primary mt-2 w-25">Register!</button>
+                            <button type="button" class="btn btn-outline-primary mt-2 w-25">Save changes</button>
                         </div>
                     </div>
                 </div>
