--- a/web_tp_dz/web_dz_123/templates/layouts/answer.html
+++ b/web_tp_dz/web_dz_123/templates/layouts/answer.html
@@ -1,18 +1,28 @@
 {% load static %}
-<article class = "card mb-3 border border-5">
+<article class = "card mb-3 border border-5 {% if item.status == 'm' %} border-success {% endif %}">
     <div class="row g-0">
         <div class = "col-2 p-3">
             <div class="border w-100 mb-3" style="height: 100px; width: 100px;">
                 <img src="img.jpg" class="img-fluid rounded-start" >
             </div>
             <div class = "input-group flex-nowrap w-50">
-                <input type="number" value="3" class="form-control" />
+                <input type="number" value="{{item.rating}}" class="form-control" />
             </div>
         </div>
         <div class = "col">
             <div class="card-body">
-                <p class="card-text">In our fast-paced world, effective communication often demands brevity without sacrificing substance. Short answers, characterized by their conciseness and clarity, are crucial tools in the communicator's arsenal.</p>
+                <p class="card-text">{{ item.text}}</p>
             </div>
+            {% if item.status == 'm' %}
+            <div class = "row p-3 mt-2">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked="">
+                    <label class="form-check-label" for="flexCheckChecked">
+                        Marked by the author as the correct answer
+                    </label>
+                  </div>
+            </div>
+            {% else %}
             <div class = "row p-3 mt-2">
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
@@ -21,6 +31,7 @@
                     </label>
                   </div>
             </div>
+            {% endif %}
         </div>
     </div>
 </article>
