--- a/web_tp_dz/web_dz_123/templates/layouts/base.html
+++ b/web_tp_dz/web_dz_123/templates/layouts/base.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Voprosnick</title>
+        <title>Stack Overflow Demo</title>
         <link href = "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel = "stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
         crossorigin="anonymous" />
     </head>
@@ -18,27 +18,20 @@
                     <h3>Popular Tags</h3>
                     <div class="row">
                         <div class="col">
-                        <a href = "{%url "tag" 'C++' %}" class="badge text-bg-primary">C++</a>
-                        <a href = "{%url "tag" 'Python' %}" class="badge text-bg-secondary">Python</a>
-                        <a href = "{%url "tag" 'JavaScript' %}" class="badge text-bg-success">JavaScript</a>
-                        <a href = "{%url "tag" 'C' %}" class="badge text-bg-danger">C</a>
-                        <a href = "{%url "tag" 'React' %}" class="badge text-bg-warning">React</a>
-                        <a href = "{%url "tag" 'Django' %}" class="badge text-bg-info">Django</a>
-                        <a href = "{%url "tag" 'Swift' %}" class="badge text-bg-light">Swift</a>
-                        <a href = "{%url "tag" 'Kotlin' %}" class="badge text-bg-dark">Kotlin</a>
+                        {% for tag in popular_tags %}
+                            <a href = "{% url 'tag' tag.name %}" class="badge text-bg-primary">{{tag.name}}</a>
+                        {% endfor %}
                         </div>
                     </div>
                     <h3 class="mt-4">Best Members</h3>
                     <div>
-                        <a href="#" class="d-block">chelik</a>
-                        <a href="#" class="d-block">KPYTOU_HOCOK</a>
-                        <a href="#" class="d-block">adobeAkrobat</a>
-                        <a href="#" class="d-block">zeonov</a>
-                        <a href="#" class="d-block">Xeonov</a>
-                        <a href="#" class="d-block">Parovoz</a>
+                        {% for member in best_members %}
+                            <a href="{% url 'member' member.nickname %}" class="d-block">{{member.nickname}}</a>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
+
         </main>
     </body>
 </html>
