--- a/web_tp_dz/web_dz_123/templates/layouts/navbarUser.html
+++ b/web_tp_dz/web_dz_123/templates/layouts/navbarUser.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{% url "index" %}">
             <img src="{% static 'logo.jpg' %}" width="30" height="30" class="d-inline-block align-text-top">
             AskMe
           </a>
