--- a/web_tp_dz/web_dz_123/templates/layouts/base.html
+++ b/web_tp_dz/web_dz_123/templates/layouts/base.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous" />
     </head>
     <body>
-        {% include "layouts/navbarUser.html" %}
+        {% include "layouts/navbarGuest.html" %}
           <main class="container-fluid container-lg mt-3">
             <div class = "row">
                 {% block content %}
