--- a/web_tp_dz/web_dz_123/templates/ask.html
+++ b/web_tp_dz/web_dz_123/templates/ask.html
@@ -1,35 +1,14 @@
 {% extends "layouts/base.html" %}
+{% load django_bootstrap5 %}
 
 {% block content %}
             <h3>New Question</h3>
             <div class = "row">
                 <div class = "col-8">
-                    <div class = "row mt-4">
-                        <div class = "col-1">
-                            <p class = "text-start fs-4">Title</p>
-                        </div>
-                        <div class = "col-11">
-                            <input type="text" class = "form-control w-100" placeholder="Write title here...">
-                        </div>
-                    </div>
-                    <div class = "row mt-4 h-75">
-                        <div class = "col-1">
-                            <p class = "text-start fs-4">Text</p>
-                        </div>
-                        <div class = "col-11">
-                            <textarea type="text" class = "form-control h-100" placeholder="Write text of your question here..."></textarea>
-                        </div>
-                    </div>
-                    <div class = "row mt-4">
-                        <div class = "col-1">
-                            <p class = "text-start fs-4">Tags</p>
-                        </div>
-                        <div class = "col-11">
-                            <input type="text" class = "form-control" placeholder="Write tags here...">
-                            <button type="button" class="btn btn-outline-primary mt-4 w-25">Ask</button>
-                            <p class = "text-danger fs-6 mt-3">Please indicate the title of the question</p>
-                        </div>
-                    </div>
-                    
+                    <form method = 'post' action = "{% url 'ask' %}">
+                        {% csrf_token %}
+                        {% bootstrap_form form %}
+                        <button type="submit" class="btn btn-outline-primary mt-4 w-25">Ask</button>
+                    </form>
                 </div>
 {% endblock %}
