--- a/web_tp_dz/web_dz_123/templates/layouts/answer.html
+++ b/web_tp_dz/web_dz_123/templates/layouts/answer.html
@@ -5,33 +5,24 @@
             <div class="border w-100 mb-3" style="height: 100px; width: 100px;">
                 <img src="img.jpg" class="img-fluid rounded-start" >
             </div>
-            <div class = "input-group flex-nowrap w-50">
-                <input type="number" value="{{item.rating}}" class="form-control" />
+            <div class="answer-like-control input-group flex-nowrap" data-answer-id="{{ item.id }}">
+                <button class="like-btn btn btn-outline-success btn-sm">Like</button>
+                <span class="form-control like-counter" style="white-space: nowrap; text-align: center;">{{ item.rating }}</span>
+                <button class="dislike-btn btn btn-outline-danger btn-sm">Dislike</button>
             </div>
         </div>
         <div class = "col">
             <div class="card-body">
                 <p class="card-text">{{ item.text}}</p>
             </div>
-            {% if item.status == 'm' %}
             <div class = "row p-3 mt-2">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked="">
+                    <input class="correct-answer-checkbox form-check-input" data-answer-id="{{ item.id }}" type="checkbox" {% if item.status == 'm' %} checked {% endif %}>
                     <label class="form-check-label" for="flexCheckChecked">
                         Marked by the author as the correct answer
                     </label>
                   </div>
             </div>
-            {% else %}
-            <div class = "row p-3 mt-2">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
-                        Marked by the author as the correct answer
-                    </label>
-                  </div>
-            </div>
-            {% endif %}
         </div>
     </div>
 </article>
