--- a/web_tp_dz/web_dz_123/templates/layouts/navbarGuest.html
+++ b/web_tp_dz/web_dz_123/templates/layouts/navbarGuest.html
@@ -2,17 +2,33 @@
 <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url "index" %}">
-            <img src="{% static 'logo.jpg' %}" width="30" height="30" class="d-inline-block align-text-top">
+            <img src="{% static 'avatar.jpg' %}" width="30" height="30" class="d-inline-block align-text-top">
             AskMe
           </a>
-      <form class="d-flex" role="search">
+      <form class="d-flex" role="search" action = "{% url "ask" %}">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit"><a href = "{% url "ask" %}">ASK</a></button>
+        <button class="btn btn-outline-success" type="submit">ASK</button>
       </form>
-      <div class = "d-flex justify-content-between gap-3"> 
-            <button id="loginButton"><a href = "{% url "login" %}">Log in</a></button>
-            <a href = "{% url "signup" %}">Sign up!</a>
-      </div>
+      {% if user.is_authenticated %}
+        <div class = "d-flex justify-content-between gap-3"> 
+          <div>
+              <img src="{{ user.user_profile.avatar.url }}" width = "50" height = "50">
+          </div>
+          <div class = "d-flex flex-column justify-content-between"> 
+              <div>{{ user.username }}</div>
+              <div>
+                  {% csrf_token %}
+                  <a href = "{% url "settings" %}">Settings</a>
+                  <a href = "{% url "logout" %}?next={{ request.path }}">Log out</a>
+              </div>
+          </div>
+        </div>
+      {% else %}
+        <div class = "d-flex justify-content-between gap-3"> 
+              <a href = "{% url "login" %}">Log in</a>
+              <a href = "{% url "signup" %}">Register</a>
+        </div>
+      {% endif %}
     </div>
     </div>
   </nav>
