--- a/web_tp_dz/web_dz_123/templates/signup.html
+++ b/web_tp_dz/web_dz_123/templates/signup.html
@@ -1,60 +1,13 @@
 {% extends "layouts/base.html" %}
+{% load django_bootstrap5 %}
 
 {% block content %}
             <h3>Registration</h3>
-            <p class = "text-danger fs-6 mt-3">Sorry, this email address already registred!</p>
                 <div class = "col-8">
-                    <div class = "row mt-2">
-                        <div class = "col-3">
-                            <p class = "text-start fs-5">Login</p>
-                        </div>
-                        <div class = "col-9">
-                            <input type="text" class = "form-control w-75" placeholder="Enter your login...">
-                        </div>
-                    </div>
-                    <div class = "row mt-2">
-                        <div class = "col-3">
-                            <p class = "text-start fs-5">Email</p>
-                        </div>
-                        <div class = "col-9">
-                            <input type="text" class = "form-control w-75" placeholder="Enter your email...">
-                        </div>
-                    </div>
-                    <div class = "row mt-2">
-                        <div class = "col-3">
-                            <p class = "text-start fs-5">NickName</p>
-                        </div>
-                        <div class = "col-9">
-                            <input type="text" class = "form-control w-75" placeholder="Enter your nickname...">
-                        </div>
-                    </div>
-                    <div class = "row mt-2">
-                        <div class = "col-3">
-                            <p class = "text-start fs-5">Password</p>
-                        </div>
-                        <div class = "col-9">
-                            <input type="password" class = "form-control w-75" placeholder="Enter your password...">
-                        </div>
-                    </div>
-                    <div class = "row mt-2">
-                        <div class = "col-3">
-                            <p class = "text-start fs-5">Repeat password</p>
-                        </div>
-                        <div class = "col-9">
-                            <input type="password" class = "form-control w-75" placeholder="Enter your password...">
-                        </div>
-                    </div>
-                    <div class = "row mt-2">
-                        <div class = "col-3">
-                            <p class = "text-start fs-5">Upload avatar</p>
-                        </div>
-                        <div class = "col-9">
-                            <div class="input-group mb-3 w-75">
-                                <input type="file" class="form-control" id="inputGroupFile02">
-                                <label class="input-group-text" for="inputGroupFile02">Upload</label>
-                            </div>
-                            <button type="button" class="btn btn-outline-primary mt-2 w-25">Register!</button>
-                        </div>
-                    </div>
+                    <form method="post" action="{% url 'signup' %}">
+                        {% csrf_token %}
+                        {% bootstrap_form form %}
+                        <button type="submit" class="btn btn-outline-primary mt-2 w-25">Register!</button>
+                    </form>
                 </div>
 {% endblock %}
