лайки дизлайки картинки тачки квартиры яхты оружие криптовалюта и майнинг

--- a/web_tp_dz/web_dz_123/templates/layouts/answer.html
+++ b/web_tp_dz/web_dz_123/templates/layouts/answer.html
@@ -21,8 +21,9 @@
                     <label class="form-check-label" for="flexCheckChecked">
                         Marked by the author as the correct answer
                     </label>
-                  </div>
+                </div>
             </div>
         </div>
     </div>
+    <script src="{% static "js/answer.js" %}?v={{ STATIC_VERSION }}"></script>
 </article>
