--- a/web_tp_dz/web_dz_123/templates/layouts/questionCard.html
+++ b/web_tp_dz/web_dz_123/templates/layouts/questionCard.html
@@ -29,4 +29,5 @@
             </div>
         </div>
     </div>
+    <script src="{% static "js/question-like.js" %}?v={{ STATIC_VERSION }}"></script>
 </article>
